--- a/style.css
+++ b/style.css
@@ -1,313 +1,583 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
+    font-family: 'Josefin Sans', sans-serif;
+    list-style: none;
+    text-decoration: none;
+    scroll-behavior: smooth;
 }
-.hero{
-    height: 100vh;
+:root{
+    --bg-color: #fff;
+    --second-color: #f54300;
+    --main-color: #7dd87d;
+    --text-color: #13089;
+    --other-color: #999fb9;
+    --big-font: 4.8rem;
+    --h2-font: 3.2rem;
+    --p-font: 1rem;
+}
+body{
+    color: var(--text-color);
+    background: var(--bg-color);
+}
+header{
+    position: fixed;
     width: 100%;
-    background-image: url(1614387481_17-p-svetlii-fon-dlya-zuma-20.jpg);
-    background-size: cover;
-    background-position: center;
-}
-nav{
+    right: 0;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 45px;
-    padding-left: 8%;
-    padding-right: 8%;
+    background: transparent;
+    padding: 25px 18%;
+    z-index: 1000;
+    transition: all .35s ease;
 }
-.logo{
-    color: black;
-    font-size: 35px;
-    letter-spacing: 1px;
-    cursor: pointer;
+.logo img{
+    max-width: 100%;
+    width: 150px;
+    height: auto;
 }
-span{
-    color: #5050d0;
+.navbar{
+    display: flex;
+    align-items: center;
 }
-nav ul li{
-    list-style-type: none;
-    display: inline-block;
-    padding: 30px 55px;
+.navbar a{
+    font-size: var(--p-font);
+    color: var(--text-color);
+    padding: 10px 28px;
+    font-weight: 700;
+    transition: all .35s ease;
 }
-nav ul li a{
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: capitalize;
+.navbar  a:hover{
+    color: var(--main-color);
 }
-nav ul li a:hover{
-    color: #5050d0;
-    transition: .4s;
-}
-.btn{
-    background-color: #5050d0;
-    color: black;
-    text-decoration: none;
-    border: 2px solid transparent;
-    padding: 5px 20px;
-    border-radius: 30px;
-    transition: transform .4s;
-}
-.btn:hover{
-    transform: scale(1.2);
-}
-.content{
-    position: absolute;
-    top: 40%;
-    left: 8%;
-    transform: translateY(-50%);
-}
-h1{
-    color: #000000;
-    margin: 5px 5px 5px 0px;
-    font-size: 50px;
-}
-h3{
-    font-size: 20px;
-    color: #ac4ac7;
-    margin-bottom: 5px;
-}
-h4{
-    color: #5050d0;
-    letter-spacing: 2px;
-    font-size:20px;
+.navbar a.active{
+    color: var(--main-color);
 
 }
-.newslatter form{
-    width: 380px;
-    max-width: 100%;
-    position: relative;
-    margin: 3px;
+.navbar a.cart{
+    font-size: 50px;
 }
-.newslatter form input:first-child{
+#menu-icon{
+    color: var(--main-color);
+    font-size: 40px;
+    z-index: 10001;
+    cursor: pointer;
+    display: none;
+}
+.top-btn a{
+    display: inline-block;
+    background: var(--main-color);
+    color: white;
+    padding: 15px 30px;
+    border-radius: 30px;
+    border: 2px solid black;
+    font-size: 17px;
+    font-weight: 700;
+}
+section{
+    padding: 80px 18%;
+}
+.home{
+    height: 90vh;
+    width: 100%;
+    align-items: center;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3rem;
+}
+.home-text h1{
+    margin: 20px 0px;
+    font-size: var(--big-font);
+    line-height: 1.1;
+}
+.home-text h3{
+    color: var(--second-color);
+    font-size: 35px;
+    font-weight: 1600;
+}
+.home-text p{
+    font-size: var(--p-font);
+    color: var(--other-color);
+    line-height: 27px;
+    font-weight: 400;
+    margin-bottom: 30px;
+    font-family: 'Open Sans', sans-serif;
+}
+.btn{
+    display: inline-block;
+    background: var(--main-color);
+    color: #fff;
+    padding: 17px 32px;
+    border-radius: 30px;
+    border: none;
+    font-size: 17px;
+    font-weight: 700;
+    transition: all .25s ease;
+}
+.btn:hover{
+    box-shadow: 0px 15px 22px rgb(125 216 125 / 44%);
+}
+.home-img img{
+    width: 100%;
+    height: auto;
+}
+
+.about{
+    background: url(feature.svg);
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    align-items: center;
+    grid-gap: 3rem;
+}
+.about-img img{
+    width: 100%;
+    height: auto;
+    padding-top: 80px;
+}
+.about-text h2{
+    margin: 15px 0px 15px;
+    font-size: var(--h2-font);
+    line-height: 1.1;
+}
+.about-text h3{
+    color: var(--second-color);
+    font-size: 25px;
+    font-weight: 600;
+}
+.about-text p{
+    font-size: var(--p-font);
+    color: var(--other-color);
+    line-height: 27px;
+    font-weight: 400;
+    margin-bottom: 30px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+header.sticky{
+    background: #fff;
+    padding: 12px 18%;
+    box-shadow: 0px 0px 1px #13084982;
+}
+.center-text{
+    text-align: center;
+}
+.center-text h2{
+    margin: 15px 0px 0px;
+    font-size: var(--h2-font);
+    line-height: 1.1;
+}
+.center-text h3{
+    color: var(--second-color);
+    font-size: 35px;
+    font-weight: 600;
+}
+.menu-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+    grid-gap: 2rem;
+    align-items: center;
+    margin-top: 4.5rem;
+    cursor: pointer;
+}
+.box{
+    padding: 15px 50px 15px 50px;
+    background: var(--bg-color);
+    box-shadow: 0px 5px 40px rgb(19 8 73 / 13%);
+    border-radius: 20px;
+    transition: all .40s ease;
+}
+.box-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+.box-img img{
+    width: 100%;
+    height: auto;
+}
+.box-text h4{
+    color: var(--text-color);
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.box-text p{
+    font-size: var(--p-font);
+    color: var(--other-color);
+    font-weight: 400;
+    margin-bottom: 15px;
+    font-family: 'Open Sans', sans-serif;
+}
+.box-text h6{
+    color: var(--second-color);
+    font-size: 20px;
+    font-weight: 600;
+}
+.box:hover{
+    transform: scale(1.04) translateY(-5px);
+}
+.box-btn{
+    text-align: center;
+    margin-top: 5rem;
+}
+
+.team-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    grid-gap: 2rem;
+    align-items: center;
+    margin-top: 6rem;
+    cursor: pointer;
+    text-align: center;
+}
+.row{
+    padding: 28px 30px;
+    background: var(--bg-color);
+    box-shadow: 0px 5px 40px rgb(19 8 73 / 13%);
+    border-radius: 20px;
+    transition: all .40s ease;
+}
+.team-img img{
+    height: 120px;
+    width: 120px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 7px solid var(--main-color);
+    margin-bottom: 25px;
+}
+.row h4{
+    font-size: 22px;
+    font-weight: 700;
+    color: var(--text-color);
+    margin-bottom: 7px;
+}
+.row p{
+    font-size: var(--p-font);
+    color: var(--other-color);
+    font-weight: 400;
+    margin-bottom: 25px;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1px;
+}
+.team-icon i{
+    display: inline-block;
+    width: 37px;
+    height: 37px;
+    background: var(--bg-color);
+    color: var(--text-color);
+    border: 2px solid var(--main-color);
+    border-radius: 50%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    margin: 0 7px;
+    transition: all .40s ease;
+}
+.team-icon i:hover{
+    transform: scale(1.2);
+    background: var(--main-color);
+    color: #fff;
+}
+.row:hover{
+    transform: scale(1.04) translateY(-5px);
+}
+
+.container{
+    padding: 70px 80px;
+    box-shadow: 0px 5px 40px rgb(19 8 73 / 13%);
+    border-radius: 20px;
+}
+.newsletter-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+}
+.news-text h2{
+    margin: 15px 0px 15px;
+    font-size: var(--h2-font);
+    line-height: 1.1;
+}
+.news-text h3{
+    color: var(--second-color);
+    font-size: 30px;
+    font-weight: 600;
+}
+.news-text p{
+    font-size: var(--p-font);
+    color: var(--other-color);
+    font-weight: 400;
+    line-height: 30px;
+    font-family: 'Open Sans', sans-serif;
+}
+.letter form{
+    position: relative;
+    width: 350px;
+    max-width: 100%;
+}
+.letter form input:first-child{
     display: inline-block;
     width: 100%;
-    padding: 14px 130px 14px 15px;
-    border: 2px solid #5050d0;
+    padding: 16px 130px 16px 15px;
+    border: 2px solid var(--main-color);
     outline: none;
     border-radius: 30px;
 }
-.newslatter form input:last-child{
+.letter form input:last-child{
     position: absolute;
     display: inline-block;
     outline: none;
     border: none;
-    padding: 15px 20px;
+    padding: 17px 30px;
     border-radius: 30px;
-    border: 2px solid #5050d0;
-    box-shadow: 0px 0px 5px #000, 0px 0px 15px #5050d0;
-    top: 0;
+    background: var(--main-color);
+    color: #fff;
+    top: 1px;
     right: 1px;
+    cursor: pointer;
 }
-.about{
-    width: 100%;
-    padding: 15px 0px;
-    background-color: white;
-}
-.about img{
-    height: auto;
-}
-.about-text{
-    width: 550px;
-    bottom: 430px;
-    right: 1080px;
-    position: absolute;
 
+.blog{
+    background: url(blog.svg);
+    background-size: cover;
+    background-position: center left;
+}
+.blog-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+    grid-gap: 2rem;
+    align-items: center;
+    margin-top: 6rem;
+    cursor: pointer;
+    border-radius: 20px;
 }
 .main{
-    width: 6530px;
-    max-width: 100%;
-    display: flex;
-    align-items: center;
-    position: relative;
-    justify-content: space-around;
+    padding: 0px 0px 10px 0px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 40px rgb(19 8 73 / 13%);
+    transition: all .40s ease;
 }
-.about-text h2{
-    color: black;
-    font-size: 45px;
-    text-transform: capitalize;
-    margin-bottom: 10px;
-}
-.about-text h5{
-    color: black;
-    letter-spacing: 5px;
-    margin-bottom: 10px;
-    font-size: 22px;
-    text-transform: capitalize;
-}
-.about-text p{
-    color: #ac4ac7;
-    font-size: 18px;
-    line-height: 28px;
-    margin-bottom: 5px;
-}
-button{
-    background-color: #5050d0;
-    color: black;
-    text-decoration: none;
-    border: 2px solid transparent;
-    padding: 5px 20px;
-    border-radius: 30px;
-    transition: transform .4s;
-    align-items: flex-end;
-}
-button:hover{
-    background-color: transparent;
-    border: 2px solid #ac4ac7;
-    cursor: pointer;
-}
-.service{
-    background: white;
+.blog-content img{
     width: 100%;
-    padding: 100px 0px;
+    height: 320px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
 }
-.title h2{
-    color: black;
-    font-size: 75px;
-    width: 1130px;
-    margin: 30px auto;
-    text-align: center;
+.blog-text{
+    padding: 20px 15px;
 }
-.box{
-    align-items: center;
-    text-align: center;
-}
-.box1{
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    min-height: 200px;
-    border: 3px solid black;
-    margin: 60px;
-    border-radius: 30px;
-}
-.box2{
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    min-height: 200px;
-    border: 3px solid black;
-    margin: 60px;
-    border-radius: 30px;
-}
-.box3{
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    min-height: 200px;
-    border: 3px solid black;
-    margin: 60px;
-    border-radius: 30px;
-}
-.card{
-    height: 365px;
-    width: 335px;
-    padding: 20px 35px;
-    background: white;
-    border-radius: 30px;
-    margin: 15px;
-    text-align: center;
-}
-.card svg{
-    height: 65px;
-    font-size: 40px;
-    text-align: center;
-    margin: 25px;
-    right: 80px;
-    color: #5050d0;
-}
-h5{
-    color: black;
-    font-size: 22px;
+.blog-text h6{
+    font-size: 13px;
+    font-weight: 400;
+    color: var(--other-color);
     margin-bottom: 15px;
 }
-.pra p{
-    color: #ac4ac7;
-    font-size: 18px;
-    margin-bottom: 25px;
+.blog-text h4{
+    font-size: 19px;
+    line-height: 1.2;
+    font-weight: 700;
+    color: var(--text-color);
+    margin-bottom: 10px;
+    transition: all .30s ease;
 }
-.card .button{
-    background-color: #5050d0;
-    color: black;
-    text-decoration: none;
-    border: 2px solid transparent;
-    padding: 5px 20px;
-    border-radius: 30px;
-    transition: transform .4s;
+.blog-text p{
+    font-size: var(--p-font);
+    color: var(--other-color);
+    font-weight: 400;
+    line-height: 30px;
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 20px;
 }
-.card .button:hover{
-    background-color: transparent;
-    border: 2px solid #ac4ac7;
-    cursor: pointer;
-}
-.contact-me{
-    width: 100%;
-    height: 190px;
-    background: #343131;
+.blog-btn{
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
 }
-.contact-me p{
-    color: white;
-    font-size: 25px;
-    font-weight: bold;
-    margin: 29px;
+.blog-btn a{
+    font-size: var(--p-font);
+    color: var(--main-color);
+    margin-right: 10px;
 }
-.contact-me .button-two{
-    background-color: #5050d0;
-    color: black;
-    text-decoration: none;
-    border: 2px solid transparent;
-    padding: 5px 20px;
-    border-radius: 30px;
-    transition: transform .4s;
+.blog-btn i{
+    font-size: 19px;
+    color: var(--main-color);
 }
-.contact-me .button-two:hover{
-    transform: scale(1.2);
+.blog-text h4:hover{
+    color: var(--main-color);
 }
-footer{
-    position: relative;
-    width: 100%;
-    height: 240px;
-    background: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.main:hover{
+    transform: scale(1.04) translateY(-5px);
 }
-footer p:nth-child(1){
-    font-size: 30px;
-    color: white;
-    margin-bottom: 25px;
-    font-weight: bold;
+
+.contact{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    grid-gap: 2rem;
 }
-footer p:nth-child(2){
-    color: white;
-    font-size: 18px;
-    width: 500px;
-    text-align: center;
-    line-height: 26px;
+.contact-box h3{
+    margin-bottom: 1.5rem;
+    font-size: 22px;
+}
+.contact-box h5{
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--other-color);
 }
 .social{
     display: flex;
+    margin-top: 1.7rem;
 }
-.social a{
-    width: 45px;
-    height: 45px;
+.social i{
+    font-size: 24px;
+    margin-right: 1rem;
+    color: var(--main-color);
+    transition: all .40s ease;
+}
+.social i:hover{
+    transform: scale(1.3);
+}
+.contact-box li{
+    margin-bottom: 14px;
+}
+.contact-box li a{
+    display: block;
+    color: var(--other-color);
+    font-size: var(--p-font);
+    font-weight: 600;
+    transition: all .35s ease;
+}
+.contact-box li a:hover{
+    transform: translateX(10px);
+    color: var(--main-color);
+}
+.address{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #5050d0;
-    border-radius: 50%;
-    margin: 20px;
+    flex-direction: column;
 }
-.social a:hover{
-    transform: scale(1.2);
-    transition: .4s;
+.address i{
+    margin-bottom: 0.8rem;
+    font-size: 1.1rem;
+    color: var(--main-color);
+}
+.address span{
+    margin-left: 1rem;
+    color: var(--other-color);
+}
+@media (max-width: 1640px){
+    .home{
+        height: 80vh;
+        padding-top: 100px;
+    }
+    header{
+        padding: 14px 3%;
+        transition: .3s;
+    }
+    header.sticky{
+        padding: 10px 3%;
+        transition: .3s;
+    }
+    section{
+        padding: 70px 3%;
+        transition: .3s;
+    }
+}
+
+@media (max-width: 1110px){
+    #menu-icon{
+        display: block;
+    }
+    .top-btn{
+        display: none;
+    }
+    .navbar{
+        position: absolute;
+        top: -700px;
+        left: 0;
+        right: 0;
+        flex-direction: column;
+        background: #fff;
+        align-items: flex-start;
+        box-shadow: 0px 0px 1px #13084982;
+        transition: all .40s ease;
+    }
+    .navbar a{
+        display: block;
+        padding: 0.8rem;
+        margin: 0.5rem;
+    }
+    .navbar.open{
+        top: 100%;
+    }
+}
+
+@media (max-width: 1090px){
+    :root{
+        --big-font: 3.7rem;
+        --h2-font: 2.6rem;
+        --p-font: 1rem;
+        transition: .3s;
+    }
+}
+
+@media (max-width: 880px){
+    .home{
+        height: 75vh;
+        padding-top: 100px;
+    }
+    section{
+        padding: 80px 3%;
+    }
+    :root{
+        --big-font: 3.2rem;
+        --h2-font: 2.2rem;
+    }
+}
+
+@media (max-width: 760px){
+    .home{
+        grid-template-columns: 1fr;
+        height: 100vh;
+        grid-gap: 1rem;
+    }
+    .home-text{
+        text-align: center;
+    }
+    .home-img{
+        text-align: center;
+    }
+    .home-img img{
+        width: 400px;
+        max-width: 100%;
+        height: auto;
+    }
+    .about{
+        grid-template-columns: 1fr;
+        grid-gap: 1rem;
+    }
+    .about-text{
+        text-align: center;
+    }
+    .about-img{
+        order: 2;
+        text-align: center;
+    }
+    .about-img img{
+        padding-top: 0px;
+    }
+    section{
+        padding: 65px 3%;
+        transition: .3s;
+    }
+    .letter form{
+        width: 250px;
+    }
 }
